fix center align on slides cta (#922)

--- a/packages/@coorpacademy-components/src/molecule/slides/slides-player/style.css
+++ b/packages/@coorpacademy-components/src/molecule/slides/slides-player/style.css
@@ -131,14 +131,12 @@
 }
 
 .cta {
-  display: flex;
   padding-left: 25px;
   padding-right: 25px;
   font-size: 16px;
   font-family: 'Open Sans';
   min-width: 160px;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
 }
 
 .cta:focus {
